# ai-camp-2nd-llm-agent-service-project-2nd

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cfastmainlegal-automation-systemREADME.md  Dockerfile  Makefile  README.md  [TD _ Bootcamp] AI 심화 캠프_2기_수강생 커리큘럼.xlsx  curriculum_parsed.json  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  report.md  requirements.txt  tdd.skill
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: ci.yml  test.yml
ai_worker/: .env.example  .gitignore  DEPLOYMENT.md  cli.py  conftest.py  demo_parsers.py  dlq.py  errors.py  handler.py  local_lambda_test.py  pytest.ini  report.md  requirements.txt  run_demo.py  samconfig.toml  template.yaml
ai_worker/events/: s3_kakaotalk_event.json
ai_worker/notebooks/: architecture_analysis.ipynb  architecture_demo.py
ai_worker/scripts/: deploy.bat  deploy.sh
ai_worker/tests/: test_draft_generator.py  test_handler.py  test_real_integration.py  test_sensitive_logging.py
app/: main.py
app/api/: auth.py  health.py  users.py
app/core/: config.py  logging.py
app/db/: database.py
app/models/: user.py
backend/: pytest.ini  requirements.txt
backend/app/: main.py
backend/tests/: conftest.py  test_sensitive_logging.py
bootcamp/week01-python-basics/: README.md
docs/: AI_BOOTCAMP_PLAN.md  API.md  CONTRIBUTING.md  ENVIRONMENT.md  FEATURE_TEST_GUIDE.md  INDEX.md  PHASE1_IMPLEMENTATION_STATUS.md  TESTING_GUIDE_L-work-v2.md
docs/guides/: CLEAN_ARCHITECTURE_GUIDE.md  DESIGN_PATTERNS.md  E2E_INTEGRATION_PLAN.md  FOLDER_STRUCTURE.md  WORK_REPORT.md  claude.md  plan.md
docs/specs/: API_SPEC.md  ARCHITECTURE.md  BACKEND_DESIGN.md
frontend/: E2E_TEST_GUIDE.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/e2e/: auth.spec.ts  homepage.spec.ts  production.spec.ts
frontend/src/: middleware.ts
legal-automation-system/: .env.example  Makefile  README.md  docker-compose.yml
legal-automation-system/backend/: Dockerfile  pytest.ini
legal-automation-system/frontend/: Dockerfile  app.py  requirements.txt
legal-tdd-system/: project_structure.sh  pyproject.toml  pytest-simple.ini  pytest.ini  requirements-dev.txt  requirements.txt
legal-tdd-system/scripts/: tdd.py
legal-tdd-system/src/models/: document.py  user.py
legal-tdd-system/src/services/: auth.py
legal-tdd-system/tests/unit/models/: test_document.py  test_user.py
leh-ai-pipeline/: .coveragerc  BACKEND_HANDOFF.md  README.md  pytest.ini  requirements.txt  test_integration.py
leh-ai-pipeline/docs/: API_REFERENCE.md  ARCHITECTURE.md  CODE_REVIEW_IMPLEMENTATION_DETAILS.md  CODE_REVIEW_UPSTREAM_COMPARISON.md  FLOW_DIAGRAMS.md  README.md  REFACTORING_RECOMMENDATIONS.md  USAGE_GUIDE.md
leh-ai-pipeline/tests/: conftest.py  test_hybrid_search.py  test_image_vision.py  test_parsers.py  test_qdrant_store.py  test_vector_store.py
projects/project1-learning-chatbot/: README.md  docker-compose.yml
scripts/: parse_curriculum.py
specs/001-draft-export/: tasks.md
specs/002-evidence-timeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py  test_auth.py  test_health.py
(+249 files in other folders)
